[package]
name = "mediasoup-sys"
version = "0.2.4"
description = "FFI bindings to C++ libmediasoup-worker"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2018"
license = "ISC"
documentation = "https://docs.rs/mediasoup-sys"
repository = "https://github.com/versatica/mediasoup/tree/v3/worker"
include = [
    "/deps/getopt",
    "/deps/libwebrtc",
    "/fuzzer/include",
    "/fuzzer/src",
    "/include",
    "/scripts",
    "!/scripts/node_modules",
    "/src",
    "/subprojects/openssl",
    "!/subprojects/openssl/config/archs/{aix64-gcc,aix-gcc,solaris64-x86_64-gcc,solaris-x86-gcc,VC-WIN32,VC-WIN64-ARM,VC-WIN64A}",
    "!/subprojects/openssl/openssl/{apps,demos,docs,fuzz,test,tools,CHANGES}",
    "/subprojects/*.wrap",
    "/test/include",
    "/test/src",
    "/build.rs",
    "/Cargo.toml",
    "/Makefile",
    "/meson.build",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
